# CANN

./: .gitignore  CMakeLists.txt  README.md
agent/: README.md
agent/logs/: 20260604-scaffold-progress.md  README.md
agent/prompts/: algorithm_generation.md
agent/skills/: capability_list.md
benchmarks/: README.md  policy_benchmark.cpp
configs/: algorithm_policy.example.yaml
deliverables/artifacts/: README.md
docs/: roadmap.md
docs/architecture/: algorithm_plan.md  cann_env_detection.md  competition_reading.md  hccl_integration.md  reference_projects.md  runtime_backend.md
docs/reports/: performance_plan.md
examples/: collective_smoke.cpp  smoke.cpp
include/cann_liberty/: algorithm_plan.h  c_api.h  hccl_adapter.h  plugin.h  runtime.h  simulator.h  topology.h
scripts/: benchmark_local.sh  build.sh  collect_artifacts.sh  collective_smoke.sh  detect_cann_env.sh  dump_plan.sh  local_smoke.sh  package_deliverables.sh  test.sh
simulator/: README.md
src/: algorithm_plan.cpp  algorithm_selector.cpp  c_api.cpp  hccl_adapter.cpp  plugin.cpp  runtime.cpp  simulator.cpp  topology.cpp
tests/: README.md
tests/unit/: algorithm_plan_test.cpp  c_api_test.cpp  policy_test.cpp  runtime_test.cpp  simulator_test.cpp
tools/: plan_dump.cpp
tools/fault_injection/: README.md
